--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,10 @@ _test
 .vscode
 react/node_modules
 react/bundle.*.js
+react/bundle.js
 client/node_modules
 client/bundle.*.js
+client/bundle.js
 echo
 echo.exe
 *.eslintrc
