--- a/react/package.json
+++ b/react/package.json
@@ -17,30 +17,32 @@
     "babel-core": "^6.3.26",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-runtime": "^6.18.0",
+    "bootstrap": "",
     "eslint": "^2.5.1",
     "eslint-plugin-react": "^4.0.0",
+    "fixed-data-table": "",
     "html-webpack-plugin": "^2.7.2",
+    "jquery": "",
+    "jquery-ui": "",
+    "material-design-icons": "",
+    "material-ui": "",
+    "react": "",
+    "react-bootstrap": "",
+    "react-bootstrap-table": "",
+    "react-data-components": "",
+    "react-dom": "",
     "react-hot-loader": "^1.3.0",
+    "react-paginate": "",
+    "react-router": "",
+    "react-tap-event-plugin": "",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.0",
-    "material-ui": "",
-    "material-design-icons": "",
-    "react": "",
-    "react-dom": "",
-    "react-tap-event-plugin": "",
-    "react-paginate": "",
-    "react-bootstrap": "",
-    "react-router": "",
-    "react-bootstrap-table": "",
-    "bootstrap": "",
-    "fixed-data-table": "",
-    "react-data-components": "",
-    "jquery": "",
-    "jquery-ui": ""
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "react-redux": "^4.4.5",
@@ -48,6 +50,7 @@
     "react-websocket": "^1.1.6",
     "redux": "^3.6.0",
     "redux-observable": "^0.12.1",
+    "redux-saga": "^0.13.0",
     "rxjs": "^5.0.0-rc.1"
   }
 }
